--- a/Semana 5/Tradução Automática/Andre_M11_CC_SEMANA5_2.ipynb
+++ b/Semana 5/Tradução Automática/Andre_M11_CC_SEMANA5_2.ipynb
@@ -746,7 +746,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Mudando o número de steps"
+        "# Mudando o número de exemplos"
       ],
       "metadata": {
         "id": "cyUzCbslMdGB"
